--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "react-log-state": "^0.1.0",
     "react-mapbox-gl": "^4.8.6",
     "react-notify-toast": "^0.5.1",
+    "react-parallax": "^3.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
