following backend complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
     "titleBar.activeForeground": "#4b4b4b",
   },
   "window.title": "B A C K E N D",
-  "python.pythonPath": "/Users/ju/.local/share/virtualenvs/APPerture-oQqa7vG-/bin/python"
+  "python.pythonPath": "/Users/brendino500/.local/share/virtualenvs/APPerture-C-EC5WFl/bin/python"
 }
