--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,19 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "antd": "^4.6.3",
+    "axios": "^0.20.0",
+    "delay": "^4.4.0",
     "eslint-plugin-react": "^7.20.6",
     "http-proxy-middleware": "^1.0.5",
     "mapbox-gl": "^1.12.0",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-log-state": "^0.1.0",
     "react-mapbox-gl": "^4.8.6",
+    "react-measure": "^2.5.2",
     "react-notify-toast": "^0.5.1",
     "react-parallax": "^3.0.3",
     "react-router-dom": "^5.2.0",
