--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material/grid-list": "^4.0.0",
+    "@material/top-app-bar": "^7.0.0",
     "antd": "^4.6.3",
     "axios": "^0.20.0",
     "delay": "^4.4.0",
@@ -20,6 +22,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-log-state": "^0.1.0",
+    "react-map-gl": "^5.2.8",
     "react-mapbox-gl": "^4.8.6",
     "react-measure": "^2.5.2",
     "react-notify-toast": "^0.5.1",
