--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,13 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material/drawer": "^7.0.0",
     "@material/grid-list": "^4.0.0",
     "@material/top-app-bar": "^7.0.0",
-    "@material/drawer": "^7.0.0",
     "@react.material/list": "^0.2.2",
     "antd": "^4.6.3",
     "axios": "^0.20.0",
+    "bulma": "^0.9.0",
     "clsx": "^1.1.1",
     "delay": "^4.4.0",
     "eslint-plugin-react": "^7.20.6",
